# Mandelbrot_AVX256

./: CMakeLists.txt  README  test.sh
.github/workflows/: codeql.yml
cmake/: Findbenchmark.cmake
src/: render.cpp
